# pumpkin

./: .travis.yml  CMakeLists.txt  README.md
doc/: siso.dot
examples/: CMakeLists.txt  feedback-control.cpp  fir-filter.cpp  first-order.cpp  integral.cpp  proportional-controller.cpp  second-order.cpp
inc/: cascade.hpp  controller.hpp  feedback-control.hpp  fir.hpp  first-order.hpp  gain.hpp  integral.hpp  miso.hpp  parallel.hpp  polynomial.hpp  proportional-controller.hpp  second-order.hpp  simulated-system.hpp  siso.hpp  tunable.hpp
inc/detail/: cascade.cpp  fir.cpp  integral.cpp  parallel.cpp  parallel.hpp  polynomial.cpp  siso.cpp
src/: feedback-control.cpp  fir.cpp  first-order.cpp  polynomial.cpp  second-order.cpp  simulated-system.cpp
